# stomata-cli

./: Cargo.toml  README.md
.github/workflows/: not-master.yml  release.yml
stomata-cli/: Cargo.toml
stomata-cli/src/: main.rs  structs.rs
stomata-cli/src/features/: mod.rs
stomata-cli/src/features/web3/: web3_feature.rs
stomata-cli/src/renders/: mod.rs
stomata-cli/src/renders/core_displays/: display_app.rs  display_metrics.rs  display_network.rs  display_processes.rs  display_single_process.rs  display_system_info.rs  mod.rs  traits.rs
stomata-cli/src/renders/displays/: display_app.rs  display_network.rs  mod.rs
stomata-cli/src/renders/render_widgets/: mod.rs  render_input.rs  render_paragraph.rs
stomata-cli/src/renders/web3_displays/: mod.rs  portfolio.rs
stomata-core/src/collectors/: mod.rs  structs.rs  structs_impls.rs
stomata-core/src/collectors/process/: collectors.rs  metrics.rs  mod.rs
stomata-core/src/collectors/system/: collectors.rs  metrics.rs
stomata-core/src/collectors/system_info/: collectors.rs  metrics.rs  mod.rs
stomata-web3/: Cargo.toml  README.md
stomata-web3/src/: constants.rs
stomata-web3/src/providers/: address.rs  encrypt_secret.rs  mod.rs
stomata-web3/src/providers/portfolio/: service.rs  structs.rs
stomata-web3/src/providers/rpc/: helper.rs  mod.rs  service.rs  structs.rs  traits.rs
