[workspace]
members = [
    "stomata-core",
    "stomata-cli", 
    "stomata-web3"
]

resolver = "3"   # use edition 2024 feature resolver

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Aditya Singh aditya26sg@gmail.com"]
repository = "https://github.com/aditya172926/stomata-cli"


[workspace.dependencies]
anyhow = "1.0.100"
sysinfo = "0.37.2"
chrono = "0.4.42"
