[workspace]
members = [
    "stomata-core",
    "stomata-cli", 
    "stomata-web3"
]

resolver = "3"   # use edition 2024 feature resolver

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Aditya Singh aditya26sg@gmail.com"]
repository = "https://github.com/aditya172926/stomata-cli"


[workspace.dependencies]
anyhow = "1.0.100"
sysinfo = "0.37.2"
chrono = "0.4.42"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.148"
hex = "0.4.3"
rust_decimal = "1.40.0"
reqwest = { version="0.13.1", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }