[package]
name = "stomata-cli"
description = "CLI tool for collecting and visualizing system metrics"
license.workspace = true
version = "0.2.2"
edition = "2024"
authors.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["rust", "cli", "metrics"]
categories = ["command-line-utilities"]

[[bin]]
name = "stomata"
path = "src/main.rs"

[package.metadata.rust-analyzer]
cargo.features = "all"

[dependencies]
ratatui = "0.29.0"
anyhow = { workspace = true }
clap = { version = "4.5.50", features = ["derive"] }
stomata-core = { version = "0.1.5", path = '../stomata-core', optional = true }
stomata-web3 = { version = "0.0.2", path = '../stomata-web3', optional = true }
sysinfo = { workspace = true }
chrono = { workspace = true }
rpassword = "7.4.0"
hex.workspace = true

[features]
default = ["core", "web3"]
core = ["dep:stomata-core"]
web3 = ["dep:stomata-web3"]
