[package]
name = "stomata-web3"
version = "0.0.2"
description = "Web3 library to work with Stomata cli or used independently"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["web3", "tools", "monitoring", "cli"]
readme = "./README.md"
categories = ["command-line-utilities"]


[lib]
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
hex.workspace = true
rand = "0.9.2"
sha3 = "0.10.8"
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
anyhow.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"